--- a/style.css
+++ b/style.css
@@ -40,10 +40,18 @@ body{
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bold;
-    border: solid 2px #FF0000;
+    border: solid 2px #fff;
     border-radius: 10px;
 }
 
 .link-bio a:hover {
-    background-color: green;
+    background-color: red;
+}
+
+#titulo {
+    font-family: monospace;
+}
+
+a {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
