--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@
 }
 
 body{
-    background-color: black;
+    background: url(back.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .link-bio {
@@ -36,8 +40,8 @@ body{
 }
 
 .link-bio a {
-    background-color: orange;
-    color: #fff;
+    background-color: rgb(41, 172, 223);
+    color: rgb(2, 102, 60);
     padding: 30px;
     width: 300px;
     text-decoration: none;
@@ -45,19 +49,15 @@ body{
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bold;
-    border: solid 2px #fff;
+    border: solid 2px rgb(49, 0, 174);
     border-radius: 10px;
 }
 
 .link-bio a:hover {
-    background-color: red;
+    background-color: rgb(239, 59, 58);
 }
 
 .titulo {
     text-align: center;
     font-family: california;
-}
-
-a {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
